// =====================================================
// Government Subsidy & Grant Disbursement Tracking System
// Database Design - Part 1
// Security & Citizen Domain
// =====================================================

Table role {

  role_id bigint [pk, increment]

  role_name varchar(50) [not null, unique]

  description varchar(255)

}

Table user {

  user_id bigint [pk, increment]

  role_id bigint [not null, ref: > role.role_id]

  username varchar(50) [not null, unique]

  password varchar(255) [not null]

  email varchar(100) [not null, unique]

  phone varchar(15) [unique]

  status varchar(30) [not null]

  created_at timestamp

}

Table region {

  region_id bigint [pk, increment]

  state varchar(100) [not null]

  district varchar(100) [not null]

  mandal varchar(100)

  village varchar(100)

}

Table beneficiary {

  beneficiary_id bigint [pk, increment]

  user_id bigint [not null, unique, ref: > user.user_id]

  region_id bigint [not null, ref: > region.region_id]

  full_name varchar(100) [not null]

  aadhaar_number varchar(12) [not null, unique]

  date_of_birth date

  gender varchar(20)

  category varchar(30)

  annual_income decimal(12,2)

  occupation varchar(100)

}